--- a/main.html
+++ b/main.html
@@ -8,6 +8,11 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+	<div class="holder">
+		<div class="items green">3</div>
+		<div class="items red">1</div>
+		<div class="items blue">2</div>
+	</div>
     <script type="text/javascript" src="./script.js">
 </script>
 
